(dirs tools client assets)

(executables
    (names h42n42)
    (modes (byte plugin) (native plugin))
    (libraries eliom.server ocsipersist.sqlite)
    (preprocess
       (pps
           lwt_ppx
;           pgocaml_ppx
           js_of_ocaml-ppx_deriving_json
;           ocsigen-i18n
           ocsigen-ppx-rpc --rpc-raw
           eliom.ppx.server
;           -- --prefix H42n42_ --suffix _i18n --default-module H42n42_i18n
       )
    )
  )

(rule (target h42n42_i18n.eliom) (deps assets/h42n42_i18n.tsv)
  (action
    (with-stdout-to %{target}
      (with-stdin-from %{deps}
        (pipe-stdout
          (run ocsigen-i18n-generator --languages en,fr --default-language fr %{deps})
          (run sed "1 s/]/[@@deriving json]]\\n[%%shared [@@@ocaml.warning\"-27\"]]/"))))))

(rule (alias h42n42)
   (deps h42n42.cma client/h42n42.bc client/h42n42.bc.js tools/check_modules.ml)
   (action (run ocaml tools/check_modules.ml h42n42)))

(env (_ (flags (:standard -w -9-37-39))))
