(executables
    (names h42n42)
    (modes js byte)
    (preprocess
        (pps
            js_of_ocaml-ppx
            lwt_ppx
;            ocsigen-i18n
;            -- --prefix H42n42_ --suffix _i18n --default-module H42n42_i18n
        )
    )
    (js_of_ocaml
        (build_runtime_flags :standard --enable use-js-string)
        (flags :standard --enable with-js-error --enable use-js-string
               --no-source-map)) ; source maps are slow...
    (libraries eliom.client))

(include dune.client)
